--- a/static/indexx.html
+++ b/static/indexx.html
@@ -22,7 +22,7 @@
 
   <div class="container">
 
-    <form class="well form-horizontal" action="https://attendance.localtunnel.me/facecapture " method="post"  id="contact_form">
+    <form class="well form-horizontal" action="http://localhost:5000/facecapture " method="post"  id="contact_form">
 <fieldset>
 
 <!-- Form Name -->
